@@ -1,18 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 17:48:55 joerg Exp $
-include/libsexymm/libsexymm.h
-include/libsexymm/libsexymm/icon-entry.h
-include/libsexymm/libsexymm/private/icon-entry_p.h
-include/libsexymm/libsexymm/private/spell-entry_p.h
-include/libsexymm/libsexymm/private/tooltip_p.h
-include/libsexymm/libsexymm/private/tree-view_p.h
-include/libsexymm/libsexymm/private/url-label_p.h
-include/libsexymm/libsexymm/spell-entry.h
-include/libsexymm/libsexymm/tooltip.h
-include/libsexymm/libsexymm/tree-view.h
-include/libsexymm/libsexymm/url-label.h
-include/libsexymm/libsexymm/wrap_init.h
-lib/libsexymm.la
-lib/libsexymm/include/libsexymmconfig.h
-lib/libsexymm/proc/m4/convert.m4
-lib/libsexymm/proc/m4/convert_libsexymm.m4
-lib/pkgconfig/libsexymm.pc
