@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 10:15:27 nia Exp $
-
-BLAKE2s (libsexymm-0.1.9.tar.gz) = 93492f9f82f214ec4d9e8b4f66d20d906d6a6c6dfdee6872062d9a2e3f60e268
-SHA512 (libsexymm-0.1.9.tar.gz) = e8b44aa7bf28362649d2db044646d385f143eb713b21dd85aec3ae4ef6720e47d4a1b4e211ff6906de80331ad7ed76b7c346132697f7e55d1bd51ddf40dc164e
-Size (libsexymm-0.1.9.tar.gz) = 348705 bytes
