@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2539 2024/04/17 14:26:14 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2540 2024/04/17 14:29:32 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4194,3 +4194,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated editors/gobby to 0.6.0 [wiz 2024-04-17]
 	Removed editors/obby [wiz 2024-04-17]
 	Removed devel/libsigc++1 [wiz 2024-04-17]
+	Removed devel/libsexymm [wiz 2024-04-17]
